[gd_scene load_steps=3 format=3 uid="uid://8c60a1jichow"]

[ext_resource type="Theme" uid="uid://c7u2g7u3nqj0w" path="res://game/ui/theme/ui_theme.tres" id="1_kj11b"]
[ext_resource type="Script" uid="uid://bktut8w2whu85" path="res://game/ui/game_menu/game_menu.gd" id="1_script"]

[node name="GameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kj11b")
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.18, 0.12, 0.08, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Farming Game"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Continue"

[node name="NewGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "New Game"

[node name="LoadGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Load Game"

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Settings"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Quit"
